--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Quicksand';
+  color: #333;
+}
+body {
+  background-color: #FEF7EF;
+}
+h1 {
+  font-size: 50px;
+  text-align: center;
+  padding: 40px;
+}
+h3 {
+  text-align: center;
+}
+p {
+  text-align: center;
+  word-spacing: 200px;
+}
+.picture {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px; 
+  height: 100px;
+  width: 1000px;
+  max-width: 100%;
+};
+
+.color-card {
+  text-align: center;
+  background-color: white;
+  padding: 20px;
+  width: 10%;
+  height: 15%;
+  display: inline-block;
+  margin: 30px;
+  border-radius:50px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
