--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,14 @@ h1 {
 h3 {
   text-align: center;
 }
-p {
+h4 {
   text-align: center;
   word-spacing: 200px;
+}
+p {
+  text-align: center;
+  word-spacing: 215px;
+  font-size: smaller;
 }
 .picture {
   display: block;
