--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,13 @@ h4 {
   text-align: center;
   word-spacing: 200px;
 }
+.delete {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #FEF7EF;
+  border-radius: 0px; 
+}
 p {
   text-align: center;
   word-spacing: 215px;
@@ -33,7 +40,6 @@ p {
   width: 1000px;
   max-width: 100%;
 };
-
 .color-card {
   text-align: center;
   background-color: white;
@@ -43,5 +49,8 @@ p {
   display: inline-block;
   margin: 30px;
   border-radius:50px;
+}
+img:hover {
+  box-shadow: 8px 11px 14px rgba(0,0,0,0.1);
 }
 
