--- a/src/index.css
+++ b/src/index.css
@@ -53,4 +53,21 @@ p {
 img:hover {
   box-shadow: 8px 11px 14px rgba(0,0,0,0.1);
 }
-
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 600px;
+  margin: 0 auto;
+}
+/* .navbar .links {
+  margin-left: auto;
+} */
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover {
+  color: hsl(310, 70%, 74%);
+}
