--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,7 @@ img:hover {
   align-items: center;
   max-width: 600px;
   margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
 }
 /* .navbar .links {
   margin-left: auto;
