--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 * {
   margin: 0;
-  font-family: 'Quicksand';
-  color: #333;
+  padding: 0;
+  box-sizing: border-box;
 }
 body {
   background-color: #ffffff;
+  font-family: "Roboto", sans-serif;
   text-align: center;
 }
 h1 {
@@ -59,7 +60,6 @@ h4 {
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
 }
-
 .navbar a {
   display: inline;
   margin-left: 16px;
@@ -73,7 +73,6 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 form button {
   padding: 0.5rem;
