--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,27 @@
-* {
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  color: #333;
+  text-align: center;
 }
-body {
-  background-color: #ffffff;
-  font-family: "Roboto", sans-serif;
+h1, h3, h4 {
+  font-weight: 700;
+  margin: 0 0 20px;
   text-align: center;
 }
 h1 {
-  font-size: 50px;
-  text-align: center;
-  padding: 40px;
+  font-size: 36px;
+}
+h3 {
+  font-size: 20px;
+}
+h4 {
+  font-size: 12px;
 }
 .banner {
   display: block;
@@ -20,12 +30,7 @@ h1 {
   margin-left: auto;
   margin-right: auto;
 }
-h3 {
-  text-align: center;
-}
-h4 {
-  text-align: center;
-}
+
 .delete {
   display: block;
   margin-right: auto;
@@ -75,12 +80,13 @@ form {
   align-items: center;
 }
 form button {
-  padding: 0.5rem;
-  background-color: rgb(12, 12, 12);
-  color: white;
-  font-weight: bold;
-  font-size: 15px;
-  border: none;
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
 }
 .label {
   padding: 10px;
