--- a/src/index.css
+++ b/src/index.css
@@ -23,20 +23,15 @@ h3 {
 h4 {
   font-size: 12px;
 }
+p {
+  padding-top: 50px;
+}
 .banner {
   display: block;
   max-width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-.delete {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  background-color: #FEF7EF;
-  border-radius: 0px; 
 }
 .music-card {
   padding: 30px;
