--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+@import url('https://fonts.googleapis.com/css?family=Aldrich:400,700');
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Aldrich', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   margin: 0;
@@ -88,4 +88,7 @@ form button {
 }
 .links {
   display: inline;
+}
+#home, #saved {
+  font-size: 20px;
 }
